--- a/.env
+++ b/.env
@@ -17,3 +17,8 @@ CORS_ORIGINS=http://localhost:3000,http://localhost:5173
 # App Config
 DEBUG=True
 LOG_LEVEL=INFO
+
+# Email Configuration
+EMAIL_USER=codingnerds07@gmail.com
+# IMPORTANT: Use an App Password if you have 2FA enabled, not your regular password.
+EMAIL_PASSWORD="tdnn ieup tnfu siqh"
